transform-style:preserve-3d doesn't work across display:contents ancestors https://bugs.webkit.org/show_bug.cgi?id=273627 <rdar://127468969>

Reviewed by Alan Baradlay.

When looking for the ancestor element to see if it has 'preserve-3d', any intermediate
ancestors with display:contents should be skipped.

* LayoutTests/imported/w3c/web-platform-tests/css/css-transforms/transform3d-preserve3d-014-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-transforms/transform3d-preserve3d-014.html: Added.
* LayoutTests/platform/mac/TestExpectations:
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::flattenedParent):
(WebCore::RenderLayer::ancestorLayerIsDOMParent const):

Canonical link: https://commits.webkit.org/278499@main